@@ -1,6 +1,6 @@
 dnl openbsd in it's neverending brokenness requires stdint.h for intptr_t,
 dnl but that header isn't very portable...
-AC_CHECK_HEADERS([stdint.h sys/syscall.h])
+AC_CHECK_HEADERS([stdint.h sys/syscall.h sys/prctl.h])
 
 AC_SEARCH_LIBS(
    pthread_create,
@@ -147,6 +147,16 @@ int main (void)
 }
 ],ac_cv_sys_syncfs=yes,ac_cv_sys_syncfs=no)])
 test $ac_cv_sys_syncfs = yes && AC_DEFINE(HAVE_SYS_SYNCFS, 1, syscall(__NR_syncfs) is available)
+
+AC_CACHE_CHECK(for prctl_set_name, ac_cv_prctl_set_name, [AC_LINK_IFELSE([
+#include <sys/prctl.h>
+int main (void)
+{
+  char name[] = "test123";
+  int res = prctl (PR_SET_NAME, (unsigned long)name, 0, 0, 0);
+}
+],ac_cv_prctl_set_name=yes,ac_cv_prctl_set_name=no)])
+test $ac_cv_prctl_set_name = yes && AC_DEFINE(HAVE_PRCTL_SET_NAME, 1, prctl(PR_SET_NAME) is available)
 
 dnl #############################################################################
 dnl # these checks exist for the benefit of IO::AIO
