@@ -58,4 +58,5 @@ TODO: fadvise request
         - do not acquire any locks when forking.
         - incorporated some mingw32 changes by traviscline.
         - added syncfs support, using direct syscall.
+        - set thread name on linux (ps -L/Hcx, top, gdb).
 
